# cc2logger

./: .gitignore  Dockerfile.teams  README.md  admin.yml.example  build-teams-image.sh  cc2-config.toml  controller.yml  run-cc2-docker.sh  server_config.xml  setup.cfg  stop-cc2-docker.sh  test_cfgwriter.py  test_parser.py
cc2admin/: .gitignore  controller.py  logic.py  servercfgfile.py  types.py  webserver.py
cc2admin/service/: server.py
cc2admin/static/: cc2.css
cc2admin/templates/: base.html  error.html  index.html  serverhome.html  settings.html  wait.html
cc2control/: __main__.py  controller.py  servercfgfile.py  serverstats.py  types.py
cc2control/service/: server.py
cc2logger/: messages.py  parser.py  resolver.py  tool.py
cc2teams/: logic.py  webserver.py
cc2teams/templates/: base.html  confirm.html  error.html  event.html  events.html  index.html  new-event.html  new-team.html  player.html  players.html  team.html
certs/: client.conf  issue_client_cert.sh  issue_server_cert.sh  server.conf  setup_ca.sh
configs/: default.xml  small.xml
docker/: build-server.sh
logs/: game_log_2025-10-31_15-01-51.jsonl  game_log_2025-10-31_17-43-32.jsonl  game_log_2025-11-04_22-52-23.jsonl  game_log_2025-11-06_19-42-47.jsonl  game_log_2025-11-08_10-08-06.jsonl  real-game-2025-10-31.jsonl
