[metadata]
name = cc2admin
version = 0.0.1
description = Control a cc2 server
author = Ian Norton
author_email = inorton@gmail.com
license = License :: OSI Approved :: MIT License
long_description = Control a cc2 server via admin chat messages

[options]
platforms =
    any
packages =
    cc2admin
    cc2logger

python_requires = >= 3.11
install_requires = requests

[options.entry_points]
console_scripts =
    cc2admin = cc2admin.controller:main