[metadata]
name = cc2admin
version = 0.1.4
description = Control a cc2 server
author = Ian Norton
author_email = inorton@gmail.com
license = License :: OSI Approved :: MIT License
long_description = Control a cc2 server via admin chat messages

[options]
platforms =
    any
packages =
    cc2control
    cc2control.service
    cc2logger
    cc2admin
include_package_data = True

python_requires = >= 3.11
install_requires =
    requests
    pyyaml
    flask
    cachetools
    steamsignin

[options.package_data]
cc2admin =
    static/*
    templates/*

[options.entry_points]
console_scripts =
    cc2control = cc2control.controller:main